--- a/source/catalog.html
+++ b/source/catalog.html
@@ -111,7 +111,10 @@
       </symbol>
     </symbol>
     <symbol viewBox="0 0 27 35" preserveAspectRatio="meet" id="like-icon">
-      <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+      <path d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+    </symbol>
+    <symbol viewBox="0 0 48 54" preserveAspectRatio="meet" id="video-play">
+      <polygon points="0,0 0,54 48,27"/>
     </symbol>
   </svg>
   <header class="main-header">
@@ -122,12 +125,19 @@
         </svg>
       </a>
       <input class="main-nav__toogle" type="checkbox" name="menu" />
-      <div class="main-nav__hamburger-lines"><span class="line line1"></span> <span class="line line2"></span> <span
-          class="line line3"></span></div>
+      <div class="main-nav__hamburger-lines">
+        <span class="line line1"></span>
+        <span class="line line2"></span>
+        <span class="line line3"></span>
+      </div>
       <nav class="main-nav main-nav__burger-menu">
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a class="link main-nav-link" href="index.html">Главная</a></li>
-          <li class="main-nav__item"><a class="link main-nav-link main-nav-link--active" href="#">Фото и видео</a></li>
+          <li class="main-nav__item">
+            <a class="link main-nav-link" href="index.html">Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="link main-nav-link main-nav-link--active" href="#">Фото и видео</a>
+          </li>
           <li class="main-nav__item main-nav__item-logo">
             <div class="main-header__logo-s">
               <svg width="185" height="96">
@@ -135,8 +145,12 @@
               </svg>
             </div>
           </li>
-          <li class="main-nav__item"><a class="link main-nav-link" href="form.html">Форма отзыва</a></li>
-          <li class="main-nav__item"><a class="link main-nav-link" href="https://htmlacademy.ru/">HTML Academy</a></li>
+          <li class="main-nav__item">
+            <a class="link main-nav-link" href="form.html">Форма отзыва</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="link main-nav-link" href="https://htmlacademy.ru/">HTML Academy</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -146,8 +160,8 @@
       <h1 class="visually-hidden">Седона</h1>
       <div class="hero-block-inner__logo">
         <picture>
-          <source media="(min-width: 768px)" srcset="img/sedona_hero.svg" width="457" height="78" />
-          <img src="img/sedona_hero.svg" width="229" height="39" />
+          <source media="(min-width: 768px)" srcset="img/sedona_hero.svg" width="457" height="78"/>
+          <img src="img/sedona_hero.svg" width="229" height="39"/>
         </picture>
       </div>
       <div class="hero-block-inner__img"></div>
@@ -155,19 +169,14 @@
     <section class="gallery-photo">
       <div class="gallery-photo__intro">
         <h2 class="gallery-photo__title title--large">Фото и видео</h2>
-        <p class="gallery-photo__intro-description">Не можете решиться на путешествие из-за курса? Фотографии помогут
-          вам забыть о политике и экономике.</p>
+        <p class="gallery-photo__intro-description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
       <ul class="gallery-photo__list">
         <li class="gallery-photo__item gallery-photo--first">
           <picture>
-            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-1-desktop.jpg" ,
-              srcset="img/photo-1-desktop@2x.jpg 2x" />
-            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg" ,
-              srcset="img/photo-1-tablet@2x.jpg 2x" />
-            <img class="gallery-photo__image" src="img/photo-1-mobile.jpg" width="280" height="280"
-              srcset="img/photo-1-mobile@2x.jpg 2x"
-              alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
+            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-1-desktop.jpg", srcset="img/photo-1-desktop@2x.jpg 2x"/>
+            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg", srcset="img/photo-1-tablet@2x.jpg 2x"/>
+            <img class="gallery-photo__image" src="img/photo-1-mobile.jpg" width="280" height="280" srcset="img/photo-1-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
           </picture>
           <div class="gallery-photo__data">
             <div class="gallery-photo__description">
@@ -187,13 +196,9 @@
         </li>
         <li class="gallery-photo__item gallery-photo__item--two">
           <picture>
-            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-2-desktop.jpg" ,
-              srcset="img/photo-2-desktop@2x.jpg 2x" />
-            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg" ,
-              srcset="img/photo-2-tablet@2x.jpg 2x" />
-            <img class="gallery-photo__image" src="img/photo-2-mobile.jpg" width="280" height="280"
-              srcset="img/photo-2-mobile@2x.jpg 2x"
-              alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
+            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-2-desktop.jpg", srcset="img/photo-2-desktop@2x.jpg 2x"/>
+            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg", srcset="img/photo-2-tablet@2x.jpg 2x"/>
+            <img class="gallery-photo__image" src="img/photo-2-mobile.jpg" width="280" height="280" srcset="img/photo-2-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане"/>
           </picture>
           <div class="gallery-photo__data">
             <div class="gallery-photo__description">
@@ -213,13 +218,9 @@
         </li>
         <li class="gallery-photo__item">
           <picture>
-            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-3-desktop.jpg" ,
-              srcset="img/photo-3-desktop@2x.jpg 2x" />
-            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg" ,
-              srcset="img/photo-3-tablet@2x.jpg 2x" />
-            <img class="gallery-photo__image" src="img/photo-3-mobile.jpg" width="280" height="280"
-              srcset="img/photo-3-mobile@2x.jpg 2x"
-              alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
+            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-3-desktop.jpg", srcset="img/photo-3-desktop@2x.jpg 2x" />
+            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg", srcset="img/photo-3-tablet@2x.jpg 2x" />
+            <img class="gallery-photo__image" src="img/photo-3-mobile.jpg" width="280" height="280" srcset="img/photo-3-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
           </picture>
           <div class="gallery-photo__data">
             <div class="gallery-photo__description">
@@ -239,13 +240,9 @@
         </li>
         <li class="gallery-photo__item">
           <picture>
-            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-4-desktop.jpg" ,
-              srcset="img/photo-4-desktop@2x.jpg 2x" />
-            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg" ,
-              srcset="img/photo-4-tablet@2x.jpg 2x" />
-            <img class="gallery-photo__image" src="img/photo-4-mobile.jpg" width="280" height="280"
-              srcset="img/photo-4-mobile@2x.jpg 2x"
-              alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
+            <source class="gallery-photo__image" media="(min-width: 1280px)" srcset="img/photo-4-desktop.jpg", srcset="img/photo-4-desktop@2x.jpg 2x" />
+            <source class="gallery-photo__image" media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg", srcset="img/photo-4-tablet@2x.jpg 2x" />
+            <img class="gallery-photo__image" src="img/photo-4-mobile.jpg" width="280" height="280" srcset="img/photo-4-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
           </picture>
           <div class="gallery-photo__data">
             <div class="gallery-photo__description">
@@ -268,24 +265,18 @@
     <section class="video-block">
       <div class="video-block__wrapper">
         <h2 class="video-block__title title--large">Все еще сомневаетесь?</h2>
-        <p class="video-block__description">Смотрите видеопрезентацию и скорее за билетами пока они не подорожали в
-          очередной раз!</p>
+        <p class="video-block__description">Смотрите видеопрезентацию и скорее за билетами пока они не подорожали в очередной раз!</p>
       </div>
       <div class="video-block__video">
         <svg class="video-block__triangle">
           <use xlink:href="#video-play"></use>
         </svg>
         <picture>
-          <source class="gallery-photo__video" media="(min-width: 1280px)" srcset="img/video-desktop.jpg" ,
-            srcset="img/video-desktop@2x.jpg 2x" />
-          <source class="gallery-photo__video" media="(min-width: 768px)" srcset="img/video-tablet.jpg" ,
-            srcset="img/video-tablet@2x.jpg 2x" />
-          <img class="gallery-photo__video" src="img/video-mobile.jpg" width="280" height="177"
-            srcset="img/video-mobile@2x.jpg 2x"
-            alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
+          <source class="gallery-photo__video" media="(min-width: 1280px)" srcset="img/video-desktop.jpg", srcset="img/video-desktop@2x.jpg 2x"/>
+          <source class="gallery-photo__video" media="(min-width: 768px)" srcset="img/video-tablet.jpg", srcset="img/video-tablet@2x.jpg 2x" />
+          <img class="gallery-photo__video" src="img/video-mobile.jpg" width="280" height="177" srcset="img/video-mobile@2x.jpg 2x" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" />
         </picture>
-        <p class="visually-hidden">Браузер не может отобразить данное видео. Вы можете посмотреть его <a href="#">по
-            ссылке.</a></p>
+        <p class="visually-hidden">Браузер не может отобразить данное видео. Вы можете посмотреть его <a href="#">по ссылке.</a></p>
       </div>
     </section>
   </main>
@@ -302,21 +293,24 @@
             <a class="social-network__link">
               <svg class="social-network__icon" width="24" height="14">
                 <use xlink:href="#social-network-vk"></use>
-              </svg> <span class="visually-hidden">Вконтакте</span>
+              </svg>
+              <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="social-network__item social-network__item--telegram">
             <a class="social-network__link">
               <svg class="social-network__icon" width="22" height="18">
                 <use xlink:href="#social-network-telegram"></use>
-              </svg> <span class="visually-hidden">Телеграм</span>
+              </svg>
+              <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
           <li class="social-network__item social-network__item--youtube">
             <a class="social-network__link">
               <svg class="social-network__icon" width="20" height="14">
                 <use xlink:href="#social-network-youtube"></use>
-              </svg> <span class="visually-hidden">Ютуб</span>
+              </svg>
+              <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
         </ul>
